ch(api): write tests - write tests for secured endpoints
[Delivers #164780877]
